--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="tittle">
+    <meta name="description">
+    <meta name="keyword">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>PT.PIN</title>
 </head>
@@ -17,51 +22,136 @@
     <nav class="navbar navbar-expand-lg fixed-top py-3" style="background-color: rgba(17, 0, 255, 0);">
         <a class="navbar-brand" href="#"
             style="font-family: Montserrat Medium;color: white;font-size: 150%;letter-spacing: 4px;">LOGO</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="" class="btn btn-primary btn-md ml-auto"
+        <div class="topnav ml-auto">
+            <div class="row">
+                <div class="col">
+                    <a href="#home" class="btn btn-primary btn-md ml-auto active"
                         style="font-family: Roboto;color: white;">ENTRY</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <span class="navbar-toggler-icon"></span>
-                    </a>
-                    <div class="dropdown-menu mr-auto" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+                <div class="col">
+                    <div id="myLinks">
+                        <a href="#news">News</a>
+                        <a href="#contact">Contact</a>
+                        <a href="#about">About</a>
                     </div>
-                </li>
-            </ul>
-        </div>
-
-    </nav>
-    <div
-        style="background-image: url(img/pic1.png);Padding-top: 13rem;background-position: center;background-repeat: no-repeat;background-attachment: scroll;background-size: 100%;">
-        <div class="container">
-            <div class="row justify-content-md-center" style="padding-top: 15%;">
-                <div class="col col-lg-1">
-                </div>
-                <div class="col-lg-10 bg-light pt-5">
-                    <h1 style="font-family: Crimson Text Roman; font-size: 6ch; color: #013e8d;letter-spacing: 6px;">
-                        <center>TECHNICAL</center>
-                    </h1>
-                </div>
-                <div class="col col-lg-1">
+                    <a class="active" href="javascript:void(0);" class="icon" onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
                 </div>
             </div>
         </div>
-    </div>
+    </nav>
+    <section id="satu">
+        <div class="pesawat">
+            <div class="container">
+                <div class="row justify-content-md-center" style="padding-top:5%;padding-bottom: 10%;">
+                    <div class="col-lg-8 pt-5">
+                        <h1 style="font-family: A1MinchoStd;color: white; font-size: 6ch;letter-spacing: 20px;">
+                            <center>技術が創る新しい世界</center>
+                        </h1>
+                    </div>
+                </div>
+                <div class="row justify-content-md-center" style="padding-top: 15%;">
+                    <div class="col col-lg-1">
+                    </div>
+                    <div class="col-lg-10 bg-light pt-5">
+                        <h1
+                            style="font-family: Crimson Text Roman; font-size: 6ch; color: #013e8d;letter-spacing: 6px;">
+                            <center>TECHNICAL</center>
+                        </h1>
+                    </div>
+                    <div class="col col-lg-1">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-md-center">
+                <div class="col-lg-12 bg-light pt-4 pb-5">
+                    <h6 style="color: rgba(0, 0, 0, 0.600);font-family: YuGothic Medium;">
+                        <center>この文章はダミーです。</center>
+                    </h6><br>
+                    <font style="font-family: YuGothic;font-size: 100%;letter-spacing: 2px;">
+                        <center><b>
+                                この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。<br>
+                                この文章はダミーです。文字の大きさ、量、字間、行間等を確認するために入れています。</b>
+                        </center>
+                    </font>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="dua">
+        <div class="row">
+            <th>
+                <tr>
+                    <a href="" class="grid">
+                        <img src="img/grid1.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
+                </tr>
+                <tr>
+                    <a href="" class="grid">
+                        <img src="img/grid2.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
+                </tr>
+                <tr>
+                    <a href="" class="grid">
+                        <img src="img/grid3.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
+                </tr>
+                <tr>
+                    <a href="" class="grid">
+                        <img src="img/grid4.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
+                </tr>
+                <tr>
+                    <a href="" class="grid">
+                        <img src="img/grid5.jpg" class="img-fluid" alt="Responsive image">
+                    </a>
+                </tr>
+            </th>
+        </div>
+    </section>
+    <section id="tiga">
+        <div class="banner">
+            <div class="content1">
+                <img src="img/banner.jpg">
+                <p>100年企業をめざして</p>
+                <font>Aiming for 100 years company</font>
+                <h3><a href="#">MORE</a></h3>
+            </div>
+        </div>
+    </section>
+    <section id="empat">
+        <div class="py-5 my-5"></div>
+    </section>
+    <section id="lima">
+        <div class="row">
+            <div class="float-left"><img src="img/banner.jpg"></div><br>
+            <div class="float-right"><img src="img/banner.jpg"></div><br>
+            <div class="col-2"></div>
+            <div class="col-8" style="background-color: #e5e5e5;">Apa kek</div>
+            <div class="col-2"></div>
+        </div>
+    </section>
+    <section id="enam"></section>
+    <section id="tujuh"></section>
+    <section id="delapan"></section>
+    <section id="sembilan"></section>
+    <section id="sepuluh"></section>
+
 
     <!-- Optional JavaScript -->
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
