--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <!--font-->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text&family=Montserrat:wght@500&family=Nanum+Gothic&display=swap"
+        rel="stylesheet">
+
+        <!-- font font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <!-- icon -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
+    <!-- owl carousel -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css"
+        crossorigin="anonymous" />
+
+    <!-- Style CSS -->
     <link rel="stylesheet" href="style.css">
 
     <title>PT.PIN</title>
@@ -54,7 +73,7 @@
                 <div class="row justify-content-md-center" style="padding-top: 15%;">
                     <div class="col col-lg-1">
                     </div>
-                    <div class="col-lg-10 bg-light pt-5">
+                    <div class="col-lg-10 bg-white pt-5">
                         <h1
                             style="font-family: Crimson Text Roman; font-size: 6ch; color: #013e8d;letter-spacing: 6px;">
                             <center>TECHNICAL</center>
@@ -67,7 +86,7 @@
         </div>
         <div class="container">
             <div class="row justify-content-md-center">
-                <div class="col-lg-12 bg-light pt-4 pb-5">
+                <div class="col-lg-12 bg-white pt-4 pb-5">
                     <h6 style="color: rgba(0, 0, 0, 0.600);font-family: YuGothic Medium;">
                         <center>この文章はダミーです。</center>
                     </h6><br>
@@ -112,34 +131,222 @@
             </th>
         </div>
     </section>
-    <section id="tiga">
-        <div class="banner">
-            <div class="content1">
-                <img src="img/banner.jpg">
-                <p>100年企業をめざして</p>
-                <font>Aiming for 100 years company</font>
-                <h3><a href="#">MORE</a></h3>
+    <section class="sec3">
+        <div class="content-3">
+            <h1>100年企業をめざして</h1>
+            <p class="absolute">.</p>
+            <hr color="#fffff">
+            <p>Aiming for 100 years company</p>
+            <div class="right">
+                <hr color="#fffff" width="50%" style="height: 1px;">
+                <a href="#">MORE</a>
             </div>
         </div>
     </section>
-    <section id="empat">
-        <div class="py-5 my-5"></div>
+    <section class="sec4">
+        <div class="bg">
+        </div>
+        <img src="img/pic3.jpg">
+        <h1>PROJECT</h1>
+        <h1 class="bottom-header">STORY</h1>
+        <p class="btn-modif">
+            <span>01</span>
+            <span class="para">タイトルが入ります。タイトルが入ります。</span>
+            <span><i class="fas fa-long-arrow-alt-right"></i></span>
+        </p>
+        <p class="btn-modif2">
+            <span>02</span>
+            <span class="para">タイトルが入ります。タイトルが入ります。</span>
+            <span><i class="fas fa-long-arrow-alt-right"></i></span>
+        </p>
     </section>
-    <section id="lima">
-        <div class="row">
-            <div class="float-left"><img src="img/banner.jpg"></div><br>
-            <div class="float-right"><img src="img/banner.jpg"></div><br>
-            <div class="col-2"></div>
-            <div class="col-8" style="background-color: #e5e5e5;">Apa kek</div>
-            <div class="col-2"></div>
+    <section class="sec5">
+        <div class="bg">
+        </div>
+        <img src="img/pic4.jpg">
+        <h1>WORK</h1>
+        <h1 class="bottom-header">STYLE</h1>
+        <p class="btn-modif">
+            <span class="para">タイトルが入ります。タイトルが入ります。</span>
+            <span><i class="fas fa-long-arrow-alt-right"></i></span>
+        </p>
+    </section>
+    <section class="sec6">
+        <div class="bg_2">
+            <div class="row top">
+                <div class="col-6 m-left">
+                    <h1>INTERVIEW</h1>
+                    <p class="text1">社員紹介</p>
+                    <p class="text2">この文章はダミーです。文字の大きさ、量、</p>
+                    <p class="text3">字間、行間等を確認するために入れています。</p>
+                    <p class="text1">〇〇〇〇　/　名前 太郎</p>
+                    <a href="#" class="href-animation">MORE</a>
+                    <p class="btn-modif3">
+                        <span class="para2">タイトルが入ります。</span>
+                        <span><i class="fas fa-arrow-right"></i></span>
+                    </p>
+                </div>
+                <div class="col-4 col-next">
+                    <div class="owl-carousel owl-theme">
+                        <img src="img/pic5.jpg">
+                        <img src="img/pic5.jpg">
+                        <img src="img/pic5.jpg">
+                        <img src="img/pic5.jpg">
+                    </div>
+                    <p class="btn-modif4">
+                        <span class="para2">タイトルが入ります。</span>
+                        <span><i class="fas fa-arrow-right"></i></span>
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
-    <section id="enam"></section>
-    <section id="tujuh"></section>
-    <section id="delapan"></section>
-    <section id="sembilan"></section>
-    <section id="sepuluh"></section>
+    <section class="sec7">
+        <div class="row">
+            <div class="col-6 m-top">
+                <div class="rows-modif m-right">
+                    <div class="square">
+                        <div class="cards-box">
+                            <img src="img/pic7.jpg">
+                            <div class="card-head">
+                                <p><span class="para3">タイトルが入ります。</span> <a href="#"><i
+                                            class="fas fa-arrow-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 m-top">
+                <div class="rows-modif">
+                    <div class="square">
+                        <div class="cards-box">
+                            <img src="img/pic8.jpg">
+                            <div class="card-head">
+                                <p><span class="para4">タイトルが入ります。</span> <a href="#"><i
+                                            class="fas fa-arrow-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-6 m-top2">
+                <div class="rows-modif m-right">
+                    <div class="square">
+                        <div class="cards-box">
+                            <img src="img/pic9.jpg">
+                            <div class="card-head">
+                                <p><span class="para3">タイトルが入ります。</span> <a href="#"><i
+                                            class="fas fa-arrow-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 m-top2">
+                <div class="rows-modif">
+                    <div class="square">
+                        <div class="cards-box">
+                            <img src="img/pic10.jpg">
+                            <div class="card-head">
+                                <p><span class="para4">タイトルが入ります。</span> <a href="#"><i
+                                            class="fas fa-arrow-right"></i></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sec8">
+        <h1>BLOG</h1>
+        <p class="para5">オウンドメディア</p>
+
+        <div class="container-deck">
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img-top" src="img/pic11.jpg" alt="Card image cap">
+                    <div class="card-body pl-0 pr-0">
+                        <div class="card-title"><span class="label-news">NEWS</span> <small
+                                class="text-muted pl-2">0000.00.00</small></div>
+                        <p class="card-text"><b>テキストが入ります。テキストが入ります。テキストが入ります。</b></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/pic12.jpg" alt="Card image cap">
+                    <div class="card-body pl-0 pr-0">
+                        <div class="card-title"><span class="label-news">NEWS</span> <small
+                                class="text-muted pl-2">0000.00.00</small></div>
+                        <p class="card-text"><b>テキストが入ります。テキストが入ります。テキストが入ります。</b></p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/pic13.jpg" alt="Card image cap">
+                    <div class="card-body pl-0 pr-0">
+                        <div class="card-title"><span class="label-news">NEWS</span> <small
+                                class="text-muted pl-2">0000.00.00</small></div>
+                        <p class="card-text"><b>テキストが入ります。テキストが入ります。テキストが入ります。</b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <center><button type="button" class="btn btn-light btn-lg btn-square btn-modif5 mt-3 pr-5 pl-5">MORE</button>
+        </center>
+    </section>
+    <section class="sec9">
+        <h1>RECRUIT</h1>
+        <p class="para6">採用情報</p>
+        <img src="img/pic14.jpg" class="img-footer">
+        <div class="container-deck">
+            <div class="card-deck">
+                <div class="card pt-5">
+                    <center>
+                        <i class="fas fa-clipboard-check fa-4x fa-blue"></i>
+                        <p class="card-text card-mp">募集要項</p>
+                    </center>
+                </div>
+                <div class="card pt-5">
+                    <center>
+                        <i class="fas fa-cogs fa-4x fa-blue"></i>
+                        <p class="card-text card-mp">選考プロセス</p>
+                    </center>
+                </div>
+                <div class="card pt-5">
+                    <center>
+                        <i class="fas fa-chart-line fa-4x fa-blue"></i>
+                        <p class="card-text card-mp">教育プログラム</p>
+                    </center>
+                </div>
+                <div class="card pt-5">
+                    <center>
+                        <i class="far fa-question-circle fa-4x fa-blue"></i>
+                        <p class="card-text card-mp">採用Q&A</p>
+                    </center>
+                </div>
+            </div>
+        </div>
+
+        <div class="abs-btn">
+            <button type="button" class="btn btn-primary btn-square btn-footer">ENTRY</button>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <div class="footer border-0">
+        <div class="container">
+            <div class="row pt-4">
+                <div class="col-6">
+                    コーポレートサイト
+                </div>
+                <div class="col-4 ml-auto">
+                    &copy; 0000 SAMPLE Inc. All Rights Reserved.
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <script>
@@ -162,6 +369,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
